# lazyburn

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  cmd.go  go.mod  install.sh  lazyburn.py  main.go  models.go  models_test.go  output.go  output_test.go  parser.go  parser_test.go  pricing.go  pricing.json  pricing_test.go  pyproject.toml  tallyburn.py
.github/workflows/: ci.yml  release.yml
cmd/: root.go  sessions.go  update_pricing.go
internal/models/: models.go  models_test.go
internal/output/: output.go  output_test.go
internal/parser/: parser.go  parser_test.go
internal/pricing/: pricing.go  pricing_test.go
lazyburn/: cli.py  models.py  output.py  parser.py  pricing.py
tests/: test_parser.py
