[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyburn"
version = "0.2.0"
description = "Track Claude Code costs by folder, session, and date"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["claude", "anthropic", "cost", "tracking", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/joshsgoldstein/lazyburn"
Repository = "https://github.com/joshsgoldstein/lazyburn"
Issues = "https://github.com/joshsgoldstein/lazyburn/issues"

[project.scripts]
lazyburn = "lazyburn.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lazyburn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
